--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,8 +13,8 @@ jobs:
     name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
     strategy:
       matrix:
-        otp: ['20.x', '21.x', '22.x', '23.x', '24.x']
-        elixir: ['1.9.x', '1.10.x', '1.11.x', '1.12.x', '1.13.x']
+        otp: ['20.x', '21.x', '22.x', '23.x', '24.x', '25.x']
+        elixir: ['1.9.x', '1.10.x', '1.11.x', '1.12.x', '1.13.x', '1.14.x']
         exclude:
           - elixir: '1.9.x'
             otp: '23.x'
