--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,7 +2,9 @@ name: Build & Test
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - ipv6-support
   pull_request:
     branches: [ main ]
 
